test_outputs/connlist/exposure_test_exposure_with_different_rules_6_with_matching_pods_connlist_output.txt
0.0.0.0-255.255.255.255 => hello-world/workload-b[Deployment] : All Connections
0.0.0.0-255.255.255.255 => matching-ns1/matching-rule1[Deployment] : All Connections
0.0.0.0-255.255.255.255 => matching-ns2/matching-rule2-and-1[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-a[Deployment] => matching-ns1/matching-rule1[Deployment] : All Connections
hello-world/workload-a[Deployment] => matching-ns2/matching-rule2-and-1[Deployment] : All Connections
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment] => matching-ns1/matching-rule1[Deployment] : All Connections
hello-world/workload-b[Deployment] => matching-ns2/matching-rule2-and-1[Deployment] : All Connections
matching-ns1/matching-rule1[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
matching-ns1/matching-rule1[Deployment] => hello-world/workload-a[Deployment] : TCP 9090
matching-ns1/matching-rule1[Deployment] => hello-world/workload-b[Deployment] : All Connections
matching-ns1/matching-rule1[Deployment] => matching-ns2/matching-rule2-and-1[Deployment] : All Connections
matching-ns2/matching-rule2-and-1[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
matching-ns2/matching-rule2-and-1[Deployment] => hello-world/workload-a[Deployment] : TCP 8080,9090
matching-ns2/matching-rule2-and-1[Deployment] => hello-world/workload-b[Deployment] : All Connections
matching-ns2/matching-rule2-and-1[Deployment] => matching-ns1/matching-rule1[Deployment] : All Connections

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment]            	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-a[Deployment]            	=> 	entire-cluster : All Connections
hello-world/workload-b[Deployment]            	=> 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment]            	=> 	entire-cluster : All Connections
matching-ns1/matching-rule1[Deployment]       	=> 	0.0.0.0-255.255.255.255 : All Connections
matching-ns1/matching-rule1[Deployment]       	=> 	entire-cluster : All Connections
matching-ns2/matching-rule2-and-1[Deployment] 	=> 	0.0.0.0-255.255.255.255 : All Connections
matching-ns2/matching-rule2-and-1[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment]            	<= 	[namespace with {env=env-1,foo=managed}]/[pod with {app=app-x,{Key:role,Operator:In,Values:[api],}}] : TCP 8080,9090
hello-world/workload-a[Deployment]            	<= 	[namespace with {foo=managed,{Key:app,Operator:DoesNotExist,Values:[],},{Key:env,Operator:Exists,Values:[],}}]/[pod with {app=app-x,{Key:role,Operator:NotIn,Values:[monitoring search web],}}] : TCP 9090
hello-world/workload-b[Deployment]            	<= 	0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-b[Deployment]            	<= 	entire-cluster : All Connections
matching-ns1/matching-rule1[Deployment]       	<= 	0.0.0.0-255.255.255.255 : All Connections
matching-ns1/matching-rule1[Deployment]       	<= 	entire-cluster : All Connections
matching-ns2/matching-rule2-and-1[Deployment] 	<= 	0.0.0.0-255.255.255.255 : All Connections
matching-ns2/matching-rule2-and-1[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
hello-world/workload-a[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Egress
hello-world/workload-b[Deployment] is not protected on Ingress
matching-ns1/matching-rule1[Deployment] is not protected on Egress
matching-ns1/matching-rule1[Deployment] is not protected on Ingress
matching-ns2/matching-rule2-and-1[Deployment] is not protected on Egress
matching-ns2/matching-rule2-and-1[Deployment] is not protected on Ingress
